maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:8: error: value Nord is not a member of object plm.universe.Direction
  while(getDirection()!=Direction.Nord){
                                  ^IslandMaze:9: error: not found: value gache
    gache()
    ^