maze.island.IslandMaze.scala.code
override def run() {
  murExterne()
  
}

def murExterne(){
  while(getDirection()!=Direction.Nord){
    gache()
  }
  while(getY()!=0){
    if(!estFaceMur){
      avance()
    }
    else{
      droite()
      avance()
      gauche()
    }
  }
}

